--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
     .navbar-end {
       margin-left: auto;
     }
+footer {
+        background-color: #000000;
+        color: white;
+        padding: 20px 0;
+        text-align: center;
+    }
+    footer img {
+        max-width: 100px;
+        margin-bottom: 10px;
+    }
+    footer p {
+        margin: 0;
+    }
   </style>
 </head>
 <body>
@@ -50,7 +63,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="rulesDropdown">
               <li><a class="dropdown-item" href="#">Community Rules</a></li>
-              <li><a class="dropdown-item" href="#">Custom Rules</a></li>
+              <li><a class="dropdown-item" href="rules/custom-rules.html">Custom Rules</a></li>
               <li><a class="dropdown-item" href="#">Vendor Rules</a></li>
             </ul>
           </li>
@@ -94,4 +107,10 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+<!-- Footer -->
+<footer>
+    <p>Falco Team</p>
+    <p>Mercado Libre - Observability Security</p>
+    <p>&copy; 2024</p>
+</footer>
 </html>
