custom-rules.html fixstructure

--- a/rules/vendor-rules.html
+++ b/rules/vendor-rules.html
@@ -46,7 +46,7 @@ footer {
         <!-- Centered Links -->
         <ul class="navbar-nav navbar-center">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="./../index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="infoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -64,7 +64,7 @@ footer {
             <ul class="dropdown-menu" aria-labelledby="rulesDropdown">
               <li><a class="dropdown-item" href="rules/community-rules.html">Community Rules</a></li>
               <li><a class="dropdown-item" href="rules/custom-rules.html">Custom Rules</a></li>
-              <li><a class="dropdown-item" href="rules/vendor-rules.html">Vendor Rules</a></li>
+              <li><a class="dropdown-item" href="vendor-rules.html">Vendor Rules</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -101,7 +101,7 @@ footer {
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Welcome to Falcom4n</h1>
+    <h1>Welcome to vendor-rules</h1>
     <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
   </div>
 
