navigation community to custom

--- a/rules/custom-rules.html
+++ b/rules/custom-rules.html
@@ -157,8 +157,8 @@ footer {
               Rules
             </a>
             <ul class="dropdown-menu" aria-labelledby="rulesDropdown">
-              <li><a class="dropdown-item" href="rules/community-rules.html">Community Rules</a></li>
-              <li><a class="dropdown-item" href="rules/custom-rules.html">Custom Rules</a></li>
+              <li><a class="dropdown-item" href="community-rules.html">Community Rules</a></li>
+              <li><a class="dropdown-item" href="custom-rules.html">Custom Rules</a></li>
               <li><a class="dropdown-item" href="vendor-rules.html">Vendor Rules</a></li>
             </ul>
           </li>
