--- a/rules/community-rules.html
+++ b/rules/community-rules.html
@@ -14,7 +14,7 @@
     .navbar-end {
       margin-left: auto;
     }
-footer {
+    footer {
         background-color: #000000;
         color: white;
         padding: 20px 0;
@@ -62,9 +62,9 @@ footer {
               Rules
             </a>
             <ul class="dropdown-menu" aria-labelledby="rulesDropdown">
-              <li><a class="dropdown-item" href="rules/community-rules.html">Community Rules</a></li>
-              <li><a class="dropdown-item" href="rules/custom-rules.html">Custom Rules</a></li>
-              <li><a class="dropdown-item" href="#">Vendor Rules</a></li>
+              <li><a class="dropdown-item" href="community-rules.html">Community Rules</a></li>
+              <li><a class="dropdown-item" href="custom-rules.html">Custom Rules</a></li>
+              <li><a class="dropdown-item" href="vendor-rules.html">Vendor Rules</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -103,6 +103,18 @@ footer {
   <div class="container mt-5">
     <h1>Welcome to community-rules</h1>
     <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
+
+    <!-- List of Items -->
+    <h2>Security Alerts</h2>
+    <ul class="list-group mt-3">
+      <li class="list-group-item">Backdoored library loaded into SSHD</li>
+      <li class="list-group-item">PTRACE anti-debug attempt</li>
+      <li class="list-group-item">PTRACE attached to process</li>
+      <li class="list-group-item">Find AWS Credentials</li>
+      <li class="list-group-item">Linux CGroup Container Escape Vulnerability (CVE-2022-4092)</li>
+      <li class="list-group-item">Execution from /dev/shm</li>
+      <li class="list-group-item">Suspicious Java Child Processes</li>
+    </ul>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
