--- a/rules/vendor-rules.html
+++ b/rules/vendor-rules.html
@@ -14,7 +14,7 @@
     .navbar-end {
       margin-left: auto;
     }
-footer {
+    footer {
         background-color: #000000;
         color: white;
         padding: 20px 0;
@@ -46,7 +46,7 @@ footer {
         <!-- Centered Links -->
         <ul class="navbar-nav navbar-center">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./../index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="infoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -62,8 +62,8 @@ footer {
               Rules
             </a>
             <ul class="dropdown-menu" aria-labelledby="rulesDropdown">
-              <li><a class="dropdown-item" href="rules/community-rules.html">Community Rules</a></li>
-              <li><a class="dropdown-item" href="rules/custom-rules.html">Custom Rules</a></li>
+              <li><a class="dropdown-item" href="community-rules.html">Community Rules</a></li>
+              <li><a class="dropdown-item" href="custom-rules.html">Custom Rules</a></li>
               <li><a class="dropdown-item" href="vendor-rules.html">Vendor Rules</a></li>
             </ul>
           </li>
@@ -101,9 +101,53 @@ footer {
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Welcome to vendor-rules</h1>
+    <h1>Welcome to community-rules</h1>
     <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
+
+    <!-- List of Items -->
+    <h2>Security Alerts</h2>
+    <ul class="list-group mt-3">
+      <li class="list-group-item">Directory traversal monitored file read</li>
+      <li class="list-group-item">Read ssh information</li>
+      <li class="list-group-item">Read sensitive file trusted after startup</li>
+      <li class="list-group-item">Read sensitive file untrusted</li>
+      <li class="list-group-item">Write below rpm database</li>
+      <li class="list-group-item">DB program spawned process</li>
+      <li class="list-group-item">Modify binary dirs</li>
+      <li class="list-group-item">Mkdir binary dirs</li>
+      <li class="list-group-item">Run shell untrusted</li>
+      <li class="list-group-item">Launch Privileged Container</li>
+      <li class="list-group-item">Launch Excessively Capable Container</li>
+      <li class="list-group-item">Launch Sensitive Mount Container</li>
+      <li class="list-group-item">Program run with disallowed http proxy env</li>
+      <li class="list-group-item">Create files below dev</li>
+      <li class="list-group-item">Netcat Remote Code Execution in Container</li>
+      <li class="list-group-item">Launch Suspicious Network Tool in Container</li>
+      <li class="list-group-item">Launch Suspicious Network Tool on Host</li>
+      <li class="list-group-item">Search Private Keys or Passwords</li>
+      <li class="list-group-item">Clear Log Activities</li>
+      <li class="list-group-item">Remove Bulk Data from Disk</li>
+      <li class="list-group-item">Launch Remote File Copy Tools in Container</li>
+      <li class="list-group-item">Detect crypto miners using the Stratum protocol</li>
+      <li class="list-group-item">Packet socket created in container</li>
+      <li class="list-group-item">Redirect STDOUT/STDIN to Network Connection in Container</li>
+      <li class="list-group-item">Container Drift Detected (chmod)</li>
+      <li class="list-group-item">Container Drift Detected (open+create)</li>
+      <li class="list-group-item">Outbound Connection to C2 Servers</li>
+      <li class="list-group-item">Linux Kernel Module Injection Detected</li>
+      <li class="list-group-item">Sudo Potential Privilege Escalation</li>
+      <li class="list-group-item">Debugfs Launched in Privileged Container</li>
+      <li class="list-group-item">Mount Launched in Privileged Container</li>
+      <li class="list-group-item">Unprivileged Delegation of Page Faults Handling to a Userspace Process</li>
+      <li class="list-group-item">Launch Ingress Remote File Copy Tools in Container</li>
+      <li class="list-group-item">Polkit Local Privilege Escalation Vulnerability (CVE-2021-4034)</li>
+      <li class="list-group-item">Detect release_agent File Container Escapes</li>
+      <li class="list-group-item">Java Process Class File Download</li>
+      <li class="list-group-item">Modify Container Entrypoint</li>
+      <li class="list-group-item">Read environment variable from /proc files</li>
+    </ul>
   </div>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
