generic MITRE table in security-coverage

--- a/rules/community-rules.html
+++ b/rules/community-rules.html
@@ -46,7 +46,7 @@
         <!-- Centered Links -->
         <ul class="navbar-nav navbar-center">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="infoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -72,9 +72,9 @@
               Metrics
             </a>
             <ul class="dropdown-menu" aria-labelledby="metricsDropdown">
-              <li><a class="dropdown-item" href="#">Statistics</a></li>
-              <li><a class="dropdown-item" href="#">Security Coverage</a></li>
-              <li><a class="dropdown-item" href="#">Maturity</a></li>
+              <li><a class="dropdown-item" href="../metrics/">Statistics</a></li>
+              <li><a class="dropdown-item" href="metrics/security-coverage.html">Security Coverage</a></li>
+              <li><a class="dropdown-item" href="metrics/maturity.html">Maturity</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
