--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@ footer {
               Metrics
             </a>
             <ul class="dropdown-menu" aria-labelledby="metricsDropdown">
-              <li><a class="dropdown-item" href="#">Statistics</a></li>
-              <li><a class="dropdown-item" href="#">Security Coverage</a></li>
-              <li><a class="dropdown-item" href="#">Maturity</a></li>
+              <li><a class="dropdown-item" href="metrics/statistics.html">Statistics</a></li>
+              <li><a class="dropdown-item" href="metrics/security-coverage.html">Security Coverage</a></li>
+              <li><a class="dropdown-item" href="metrics/maturity.html">Maturity</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
