--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ footer {
               <li><a class="dropdown-item" href="metrics/statistics.html">Statistics</a></li>
               <li><a class="dropdown-item" href="metrics/security-coverage.html">Security Coverage</a></li>
               <li><a class="dropdown-item" href="metrics/maturity.html">Maturity</a></li>
+              <li><a class="dropdown-item" href="metrics/effectiveness.html">Effectiveness</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
