--- a/metrics/maturity.html
+++ b/metrics/maturity.html
@@ -27,7 +27,19 @@
     footer p {
         margin: 0;
     }
+    .chart-container {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+    .chart-wrapper {
+      flex: 1;
+      min-width: 300px;
+      max-width: 400px;
+      margin: 0 auto;
+    }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <!-- Navbar -->
@@ -103,9 +115,37 @@
   <div class="container mt-5">
     <h1>Welcome to maturity</h1>
     <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
+    <!-- Chart Section -->
+    <div class="chart-container mt-5">
+      <div class="chart-wrapper">
+        <h3>Detection Coverage</h3>
+        <canvas id="coverageChart"></canvas>
+      </div>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    const ctx = document.getElementById('coverageChart').getContext('2d');
+    new Chart(ctx, {
+      type: 'doughnut',
+      data: {
+        labels: ['Coverage', 'No Coverage'],
+        datasets: [{
+          data: [86.66, 13.34],
+          backgroundColor: ['#4caf50', '#f44336'],
+        }]
+      },
+      options: {
+        responsive: true,
+        plugins: {
+          legend: {
+            position: 'top',
+          },
+        },
+      }
+    });
+  </script>
 </body>
 <!-- Footer -->
 <footer>
