security and about page

--- a/metrics/maturity.html
+++ b/metrics/maturity.html
@@ -122,7 +122,7 @@
 
   <!-- Dashboard Content -->
   <div class="container mt-5">
-    <h1 class="text-center">Dashboard de Madurez de Falco</h1>
+    <h1 class="text-center">Falco Maturity Dashboard</h1>
     <div class="row mt-4">
       <div class="col-md-6">
         <div class="metric-card bg-light">
