--- a/rules/custom-rules.html
+++ b/rules/custom-rules.html
@@ -167,9 +167,9 @@ footer {
               Metrics
             </a>
             <ul class="dropdown-menu" aria-labelledby="metricsDropdown">
-              <li><a class="dropdown-item" href="#">Statistics</a></li>
-              <li><a class="dropdown-item" href="#">Security Coverage</a></li>
-              <li><a class="dropdown-item" href="#">Maturity</a></li>
+              <li><a class="dropdown-item" href="../metrics/statistics.html">Statistics</a></li>
+              <li><a class="dropdown-item" href="../metrics/security-coverage.html">Security Coverage</a></li>
+              <li><a class="dropdown-item" href="../metrics/maturity.html">Maturity</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -177,9 +177,9 @@ footer {
               Security
             </a>
             <ul class="dropdown-menu" aria-labelledby="securityDropdown">
-              <li><a class="dropdown-item" href="#">Threats</a></li>
-              <li><a class="dropdown-item" href="#">Bypasses</a></li>
-              <li><a class="dropdown-item" href="#">Challenges</a></li>
+              <li><a class="dropdown-item" href="../security/threats.html">Threats</a></li>
+              <li><a class="dropdown-item" href="../security/bypasses.html">Bypasses</a></li>
+              <li><a class="dropdown-item" href="../security/challenges.html">Challenges</a></li>
             </ul>
           </li>
         </ul>
