--- a/security/threats.html
+++ b/security/threats.html
@@ -46,7 +46,7 @@ footer {
         <!-- Centered Links -->
         <ul class="navbar-nav navbar-center">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="infoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -93,7 +93,7 @@ footer {
         <!-- About Link -->
         <ul class="navbar-nav navbar-end">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="#">About</a>
           </li>
         </ul>
       </div>
@@ -102,7 +102,7 @@ footer {
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Welcome to Falcom4n</h1>
+    <h1>Welcome to Threats</h1>
     <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
   </div>
 
