--- a/security/threats.html
+++ b/security/threats.html
@@ -14,6 +14,32 @@
     .navbar-end {
       margin-left: auto;
     }
+    .hero-section {
+      background: url('https://via.placeholder.com/1920x600') no-repeat center center;
+      background-size: cover;
+      color: white;
+      text-align: center;
+      padding: 100px 20px;
+    }
+    .hero-section h1 {
+      font-size: 3rem;
+      font-weight: bold;
+    }
+    .hero-section p {
+      font-size: 1.5rem;
+      margin-top: 20px;
+    }
+    .content-section {
+      padding: 50px 0;
+    }
+    .content-card {
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+    }
+    .content-card img {
+      border-radius: 8px 8px 0 0;
+    }
+
 footer {
         background-color: #000000;
         color: white;
@@ -105,6 +131,46 @@ footer {
     <h1>Welcome to Threats</h1>
     <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
   </div>
+
+    <!-- Hero Section -->
+    <section class="hero-section">
+        <h1>Cybersecurity Threats</h1>
+        <p>Stay informed about the latest threats and how to protect your systems.</p>
+      </section>
+    
+      <!-- Content Section -->
+      <div class="container content-section">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card content-card">
+              <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Phishing Attacks">
+              <div class="card-body">
+                <h5 class="card-title">Phishing Attacks</h5>
+                <p class="card-text">Learn how to identify and prevent phishing attacks that target sensitive data.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card content-card">
+              <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Ransomware">
+              <div class="card-body">
+                <h5 class="card-title">Ransomware</h5>
+                <p class="card-text">Discover the best practices to mitigate the impact of ransomware threats.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card content-card">
+              <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Zero-Day Exploits">
+              <div class="card-body">
+                <h5 class="card-title">Zero-Day Exploits</h5>
+                <p class="card-text">Understand zero-day vulnerabilities and how to safeguard against them.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
