--- a/security/threats.html
+++ b/security/threats.html
@@ -145,7 +145,7 @@ footer {
             <div class="card content-card">
               <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Phishing Attacks">
               <div class="card-body">
-                <h5 class="card-title">Phishing Attacks</h5>
+                <h5 class="card-title">Unauthorized Access to the API Server</h5>
                 <p class="card-text">Learn how to identify and prevent phishing attacks that target sensitive data.</p>
               </div>
             </div>
@@ -154,7 +154,7 @@ footer {
             <div class="card content-card">
               <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Ransomware">
               <div class="card-body">
-                <h5 class="card-title">Ransomware</h5>
+                <h5 class="card-title">Misconfigured or Vulnerable Containers</h5>
                 <p class="card-text">Discover the best practices to mitigate the impact of ransomware threats.</p>
               </div>
             </div>
@@ -163,7 +163,7 @@ footer {
             <div class="card content-card">
               <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Zero-Day Exploits">
               <div class="card-body">
-                <h5 class="card-title">Zero-Day Exploits</h5>
+                <h5 class="card-title">Exposure of Secrets and Sensitive Configurations</h5>
                 <p class="card-text">Understand zero-day vulnerabilities and how to safeguard against them.</p>
               </div>
             </div>
