New IRT_Rules in statistics

--- a/metrics/effectiveness.html
+++ b/metrics/effectiveness.html
@@ -53,9 +53,8 @@ footer {
               Info
             </a>
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
-              <li><a class="dropdown-item" href="./info/what-is-falco.html">What Is Falco</a></li>
-              <li><a class="dropdown-item" href="./info/why-falco.html">Why Falco</a></li>
-              <li><a class="dropdown-item" href="./info/use-cases.html">Use cases</a></li>
+              <li><a class="dropdown-item" href="#">What Is Falco</a></li>
+              <li><a class="dropdown-item" href="#">Why Falco</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -85,7 +84,6 @@ footer {
             </a>
             <ul class="dropdown-menu" aria-labelledby="securityDropdown">
               <li><a class="dropdown-item" href="security/threats.html">Threats</a></li>
-              <li><a class="dropdown-item" href="security/workshop.html">Workshop</a></li>
               <li><a class="dropdown-item" href="security/bypasses.html">Bypasses</a></li>
               <li><a class="dropdown-item" href="security/challenges.html">Challenges</a></li>
             </ul>
@@ -104,7 +102,7 @@ footer {
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Welcome to Falcom4n</h1>
+    <h1>Welcome to effectiveness.</h1>
     <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
   </div>
 
