--- a/info/use-cases.html
+++ b/info/use-cases.html
@@ -14,7 +14,7 @@
     .navbar-end {
       margin-left: auto;
     }
-footer {
+    footer {
         background-color: #000000;
         color: white;
         padding: 20px 0;
@@ -53,8 +53,8 @@ footer {
               Info
             </a>
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
-              <li><a class="dropdown-item" href="./info/what-is-falco.html">What Is Falco</a></li>
-              <li><a class="dropdown-item" href="./info/why-falco.html">Why Falco</a></li>
+              <li><a class="dropdown-item" href="./what-is-falco.html">What Is Falco</a></li>
+              <li><a class="dropdown-item" href="./why-falco.html">Why Falco</a></li>
               <li><a class="dropdown-item" href="./info/use-cases.html">Use cases</a></li>
             </ul>
           </li>
@@ -104,16 +104,42 @@ footer {
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Welcome to Falcom4n</h1>
+    <h1>Falco Use Cases</h1>
     <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-<!-- Footer -->
-<footer>
+  <!-- Use Cases Section -->
+  <div class="container mt-5" id="use-cases">
+    <h2 class="text-center mb-4">Use Cases</h2>
+    <div id="intrusion-detection" class="mt-3">
+      <h5>Intrusion Detection</h5>
+      <p>Monitor system calls and detect unauthorized access or changes in your infrastructure in real-time.</p>
+    </div>
+    <div id="compliance-enforcement" class="mt-3">
+      <h5>Compliance Enforcement</h5>
+      <p>Ensure that your environment adheres to regulatory standards and best practices with pre-defined rules.</p>
+    </div>
+    <div id="runtime-security" class="mt-3">
+      <h5>Runtime Security</h5>
+      <p>Detect and prevent malicious activities during runtime with robust security policies.</p>
+    </div>
+    <div id="kubernetes-monitoring" class="mt-3">
+      <h5>Kubernetes Monitoring</h5>
+      <p>Gain insights into Kubernetes events and ensure seamless integration for a secure cloud-native ecosystem.</p>
+    </div>
+    <div id="threat-mitigation" class="mt-3">
+      <h5>Threat Mitigation</h5>
+      <p>Quickly identify and mitigate threats, minimizing downtime and ensuring business continuity.</p>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer>
     <p>Falco Team</p>
     <p>Mercado Libre - Observability Security</p>
     <p>&copy; 2024</p>
-</footer>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
