--- a/info/what-is-falco.html
+++ b/info/what-is-falco.html
@@ -14,7 +14,7 @@
     .navbar-end {
       margin-left: auto;
     }
-footer {
+    footer {
         background-color: #000000;
         color: white;
         padding: 20px 0;
@@ -53,9 +53,9 @@ footer {
               Info
             </a>
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
-              <li><a class="dropdown-item" href="./info/what-is-falco.html">What Is Falco</a></li>
-              <li><a class="dropdown-item" href="./info/why-falco.html">Why Falco</a></li>
-              <li><a class="dropdown-item" href="./info/use-cases.html">Use cases</a></li>
+              <li><a class="dropdown-item" href="what-is-falco.html">What Is Falco</a></li>
+              <li><a class="dropdown-item" href="why-falco.html">Why Falco</a></li>
+              <li><a class="dropdown-item" href="use-cases.html">Use cases</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -104,16 +104,61 @@ footer {
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Welcome to Falcom4n</h1>
+    <h1>What is Falco</h1>
     <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-<!-- Footer -->
-<footer>
+  <!-- Why Falco Section -->
+  <div class="container mt-5" id="why-falco">
+    <h2>Why Falco?</h2>
+    <p>Falco is an open-source runtime security tool for detecting anomalous behavior. Here are some reasons to use Falco:</p>
+    <div class="accordion" id="whyFalcoAccordion">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            Real-Time Security
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#whyFalcoAccordion">
+          <div class="accordion-body">
+            Detects suspicious activity in your containerized environments.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Seamless Kubernetes Integration
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#whyFalcoAccordion">
+          <div class="accordion-body">
+            Fully supports Kubernetes and cloud-native environments.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            Custom Rules
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#whyFalcoAccordion">
+          <div class="accordion-body">
+            Allows creation of granular security policies for unique needs.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer>
     <p>Falco Team</p>
     <p>Mercado Libre - Observability Security</p>
     <p>&copy; 2024</p>
-</footer>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
