--- a/info/why-falco.html
+++ b/info/why-falco.html
@@ -14,7 +14,7 @@
     .navbar-end {
       margin-left: auto;
     }
-footer {
+    footer {
         background-color: #000000;
         color: white;
         padding: 20px 0;
@@ -53,8 +53,8 @@ footer {
               Info
             </a>
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
-              <li><a class="dropdown-item" href="./info/what-is-falco.html">What Is Falco</a></li>
-              <li><a class="dropdown-item" href="./info/why-falco.html">Why Falco</a></li>
+              <li><a class="dropdown-item" href="./what-is-falco.html">What Is Falco</a></li>
+              <li><a class="dropdown-item" href="./why-falco.html">Why Falco</a></li>
               <li><a class="dropdown-item" href="./info/use-cases.html">Use cases</a></li>
             </ul>
           </li>
@@ -104,16 +104,30 @@ footer {
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Welcome to Falcom4n</h1>
+    <h1>Why is Falco</h1>
     <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-<!-- Footer -->
-<footer>
+  <!-- Why Falco Section -->
+  <div class="container mt-5" id="why-falco">
+    <h2>Why Falco?</h2>
+    <p>Falco is an open-source runtime security tool for detecting anomalous behavior. Here are some reasons to use Falco:</p>
+    <ul>
+      <li><strong>Real-Time Security:</strong> Detects suspicious activity in your containerized environments.</li>
+      <li><strong>Seamless Kubernetes Integration:</strong> Fully supports Kubernetes and cloud-native environments.</li>
+      <li><strong>Custom Rules:</strong> Allows creation of granular security policies for unique needs.</li>
+      <li><strong>Community Driven:</strong> Powered by an active open-source community.</li>
+      <li><strong>Tool Integrations:</strong> Works with tools like Prometheus, Grafana, and Splunk.</li>
+    </ul>
+  </div>
+
+  <!-- Footer -->
+  <footer>
     <p>Falco Team</p>
     <p>Mercado Libre - Observability Security</p>
     <p>&copy; 2024</p>
-</footer>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
