IRT_Alert rules tab

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ footer {
               <li><a class="dropdown-item" href="rules/community-rules.html">Community Rules</a></li>
               <li><a class="dropdown-item" href="rules/custom-rules.html">Custom Rules</a></li>
               <li><a class="dropdown-item" href="rules/vendor-rules.html">Vendor Rules</a></li>
+              <li><a class="dropdown-item" href="rules/irt-alert-rules.html">IRT_Alert Rules</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
