--- a/rules/custom-rules.html
+++ b/rules/custom-rules.html
@@ -160,6 +160,7 @@ footer {
               <li><a class="dropdown-item" href="community-rules.html">Community Rules</a></li>
               <li><a class="dropdown-item" href="custom-rules.html">Custom Rules</a></li>
               <li><a class="dropdown-item" href="vendor-rules.html">Vendor Rules</a></li>
+              <li><a class="dropdown-item" href="irt-alert-rules.html">IRT_Alert Rules</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
