--- a/metrics/statistics.html
+++ b/metrics/statistics.html
@@ -118,6 +118,7 @@
               <li><a class="dropdown-item" href="community-rules.html">Community Rules</a></li>
               <li><a class="dropdown-item" href="custom-rules.html">Custom Rules</a></li>
               <li><a class="dropdown-item" href="vendor-rules.html">Vendor Rules</a></li>
+              <li><a class="dropdown-item" href="irt-alert-rules.html">IRT_Alert Rules</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -195,7 +196,7 @@
   </div>
 
   <div class="text-center">
-      <button class="btn btn-primary" onclick="toggleRules()">Ver reglas</button>
+      <button class="btn btn-primary" onclick="toggleRules()">View New Rules</button>
   </div>
 
   <div class="rules-container" id="rulesContainer">
@@ -231,57 +232,60 @@
       <div class="col-md-3">
           <div class="metric-card">
               <h4 class="metric-header">Total IRT_Alert Rules</h4>
-              <p class="metric-value">8</p>
+              <p class="metric-value">23</p>
           </div>
       </div>
 
       <div class="col-md-3">
           <div class="metric-card">
-              <h4 class="metric-header">New IRT Alert Flow Rules</h4>
+              <h4 class="metric-header">View New IRT Alert Flow Rules</h4>
               <p class="metric-value">8</p>
           </div>
       </div>
   </div>
 
   <div class="text-center">
-      <button class="btn btn-primary" onclick="toggleRulesParty()">View IRT_Alert Rules</button>
+      <button class="btn btn-primary" onclick="toggleRulesParty()">View New IRT_Alert Rules</button>
   </div>
 
   <div class="rules-thirdparty" id="rulesThirdParty">
       <h4 class="text-center my-3">Reglas</h4>
       <div class="rules-list">
           <div>
-              <h5>Reglas Custom</h5>
-              <div class="rule"> Kubernetes malicious tools [custom]</div>
-              <div class="rule"> SQL injection tools detected in Container [custom]</div>
-              <div class="rule"> Scanner or automated tools launched in container [custom]</div>
-              <div class="rule"> Connect to VPN/Tunnel or Proxy Server [ThirdParty1004]</div>
-              <div class="rule"> kubectl suspicious dommand launched in a container [custom]</div>
-              <div class="rule"> Load tester/benchmarking utility detect inside a container [custom]</div>
-              <div class="rule"> Web Scanner Process detected inside a container [custom]</div>
-              <div class="rule"> Enhanced Suspicious Network tools in cluster [custom]</div>
+            <h5>Reglas Third Party</h5>
+            <div class="rule" style="color: green; font-weight: bold;">🆕 Kubernetes malicious tools [custom]</div>
+            <div class="rule" style="color: green; font-weight: bold;">🆕 SQL injection tools detected in Container [custom]</div>
+            <div class="rule" style="color: green; font-weight: bold;">🆕 Scanner or automated tools launched in container [custom]</div>
+            <div class="rule" style="color: green; font-weight: bold;">🆕 Connect to VPN/Tunnel or Proxy Server [custom]</div>
+            <div class="rule" style="color: green; font-weight: bold;">🆕 kubectl suspicious dommand launched in a container [custom]</div>
+            <div class="rule" style="color: green; font-weight: bold;">🆕 Load tester/benchmarking utility detect inside a container [custom]</div>
+            <div class="rule" style="color: green; font-weight: bold;">🆕 Web Scanner Process detected inside a container [custom]</div>
+            <div class="rule" style="color: green; font-weight: bold;">🆕 Enhanced Suspicious Network tools in cluster [custom]</div>
           </div>
       </div>
   </div>
 
-  <div class="rules-thirdparty" id="rulesThirdParty"></div>
-    <h4 class="text-center my-3">Reglas</h4>
-    <div class="rules-list">
-        <div>
-            <h5>Reglas Custom</h5>
-            <div class="rule"> Kubernetes malicious tools [custom]</div>
-            <div class="rule" style="color: green; font-weight: bold;">🆕 SQL injection tools detected in Container [custom]</div>
-            <div class="rule"> Scanner or automated tools launched in container [custom]</div>
-            <div class="rule" style="color: green; font-weight: bold;">🆕 Connect to VPN/Tunnel or Proxy Server [ThirdParty1004]</div>
-            <div class="rule"> kubectl suspicious dommand launched in a container [custom]</div>
-            <div class="rule" style="color: green; font-weight: bold;">🆕 Load tester/benchmarking utility detect inside a container [custom]</div>
-            <div class="rule"> Web Scanner Process detected inside a container [custom]</div>
-            <div class="rule"> Enhanced Suspicious Network tools in cluster [custom]</div>
-        </div>
-    </div>
+  
+  <h2 class="text-center my-4">Other Statistics</h2>
+
+
+
+<div class="row justify-content-center">
+  <div class="col-md-3">
+      <div class="metric-card">
+          <h4 class="metric-header">Rules Deployed in last package</h4>
+          <p class="metric-value">n</p>
+      </div>
+  </div>
+
+  <div class="col-md-3">
+      <div class="metric-card">
+          <h4 class="metric-header">Clusters With Latest Rules
+          </h4>
+          <p class="metric-value">n</p>
+      </div>
+  </div>
 </div>
-
-
 
 
   <!-- Footer -->
