--- a/metrics/effectiveness.html
+++ b/metrics/effectiveness.html
@@ -62,9 +62,10 @@ footer {
               Rules
             </a>
             <ul class="dropdown-menu" aria-labelledby="rulesDropdown">
-              <li><a class="dropdown-item" href="rules/community-rules.html">Community Rules</a></li>
-              <li><a class="dropdown-item" href="rules/custom-rules.html">Custom Rules</a></li>
-              <li><a class="dropdown-item" href="rules/vendor-rules.html">Vendor Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/community-rules.html">Community Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/custom-rules.html">Custom Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/vendor-rules.html">Vendor Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/irt-alert-rules.html">IRT_Alert Rules</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -72,10 +73,10 @@ footer {
               Metrics
             </a>
             <ul class="dropdown-menu" aria-labelledby="metricsDropdown">
-              <li><a class="dropdown-item" href="metrics/statistics.html">Statistics</a></li>
-              <li><a class="dropdown-item" href="metrics/security-coverage.html">Security Coverage</a></li>
-              <li><a class="dropdown-item" href="metrics/maturity.html">Maturity</a></li>
-              <li><a class="dropdown-item" href="metrics/effectiveness.html">Effectiveness</a></li>
+              <li><a class="dropdown-item" href="statistics.html">Statistics</a></li>
+              <li><a class="dropdown-item" href="security-coverage.html">Security Coverage</a></li>
+              <li><a class="dropdown-item" href="maturity.html">Maturity</a></li>
+              <li><a class="dropdown-item" href="effectiveness.html">Effectiveness</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -103,8 +104,21 @@ footer {
   <!-- Content Section -->
   <div class="container mt-5">
     <h1>Welcome to effectiveness.</h1>
-    <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
+    <p>Calcular la efectividad de las reglas de una herramienta de seguridad como Falco implica evaluar qué tan bien las reglas detectan incidentes relevantes y evitan falsos positivos. Aquí tienes un enfoque estructurado para calcular esta efectividad:</p>
   </div>
+
+
+  Se necesitan unas tasas:
+
+  True Positive Rate - TPR por ende se requiere informacion que no se tiene a dia de hoy. Depende de una sinergia con IRT)
+
+  Se puede utilizar un approach basado en una muaestra.
+
+  Configurar el Entorno de Pruebas
+
+  Simular algunos escenarios 8Es valido?
+
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
