--- a/metrics/security-coverage.html
+++ b/metrics/security-coverage.html
@@ -68,6 +68,7 @@
               <li><a class="dropdown-item" href="statistics.html">Statistics</a></li>
               <li><a class="dropdown-item" href="security-coverage.html">Security Coverage</a></li>
               <li><a class="dropdown-item" href="maturity.html">Maturity</a></li>
+              <li><a class="dropdown-item" href="effectiveness.html">Effectiveness</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
