--- a/metrics/statistics.html
+++ b/metrics/statistics.html
@@ -115,10 +115,10 @@
               Rules
             </a>
             <ul class="dropdown-menu" aria-labelledby="rulesDropdown">
-              <li><a class="dropdown-item" href="community-rules.html">Community Rules</a></li>
-              <li><a class="dropdown-item" href="custom-rules.html">Custom Rules</a></li>
-              <li><a class="dropdown-item" href="vendor-rules.html">Vendor Rules</a></li>
-              <li><a class="dropdown-item" href="irt-alert-rules.html">IRT_Alert Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/community-rules.html">Community Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/custom-rules.html">Custom Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/vendor-rules.html">Vendor Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/irt-alert-rules.html">IRT_Alert Rules</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -129,6 +129,7 @@
               <li><a class="dropdown-item" href="statistics.html">Statistics</a></li>
               <li><a class="dropdown-item" href="security-coverage.html">Security Coverage</a></li>
               <li><a class="dropdown-item" href="maturity.html">Maturity</a></li>
+              <li><a class="dropdown-item" href="effectiveness.html">Effectiveness</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
